--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "redux-thunk": "^2.4.2",
