--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-html-parser": "^2.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-scroll": "^1.8.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
     "swiper": "^9.3.2"
