--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "phim/:path*",
+      "source": "/phim/:path*",
       "destination": "/index.html"
     }
   ]
