--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.3",
     "framer-motion": "^10.12.12",
     "html-react-parser": "^3.0.16",
     "query-string": "^8.1.0",
